fix aop + broken tests